--- a/Chart.yaml
+++ b/Chart.yaml
@@ -22,3 +22,8 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+maintainers:
+- email: helm-charts@a3data.com.br
+  name: A3Data
+sources:
+  - https://github.com/a3data/pyspark-helm
