--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -1,18 +1,39 @@
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: {{ template "pyspark.statefulset.apiVersion" . }}
+kind: StatefulSet
 metadata:
-  name: {{ include "pyspark.fullname" . }}
+  name: {{ template "pyspark.fullname" . }}
   labels:
     {{- include "pyspark.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
+  serviceName: {{ template "pyspark.fullname" . }}-headless
   selector:
     matchLabels:
       {{- include "pyspark.selectorLabels" . | nindent 6 }}
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.replicaCount }}
+  {{- end }}
+  podManagementPolicy: {{ .Values.podManagementPolicy }}
+  updateStrategy:
+    type: {{ .Values.updateStrategy }}
+  {{- if .Values.persistence.enabled }}
+  volumeClaimTemplates:
+  - metadata:
+      name: {{ template "pyspark.fullname" . }}
+    {{- if .Values.persistence.labels.enabled }}
+      labels:
+        {{- include "pyspark.labels" . | nindent 8 }}
+    {{- end }}
+    {{- with .Values.persistence.annotations  }}
+      annotations:
+{{ toYaml . | indent 8 }}
+    {{- end }}
+    spec:
+{{ toYaml .Values.volumeClaimTemplate | indent 6 }}
+  {{- end }}
   template:
     metadata:
+      # name: "{{ template "pyspark.fullname" . }}"
       {{- with .Values.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
@@ -20,6 +41,7 @@ spec:
       labels:
         {{- include "pyspark.selectorLabels" . | nindent 8 }}
     spec:
+      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriod }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -31,11 +53,17 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8888
+              protocol: TCP
+            - name: blockmanager
+              containerPort: 7777
+              protocol: TCP
+            - name: driver
+              containerPort: 2222
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -47,6 +75,11 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+            {{- if .Values.persistence.enabled }}
+            - name: "{{ template "pyspark.fullname" . }}"
+              mountPath: /home/notebook
+            {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
