--- a/templates/hpa.yaml
+++ b/templates/hpa.yaml
@@ -7,8 +7,8 @@ metadata:
     {{- include "pyspark.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
+    apiVersion: {{ template "pyspark.statefulset.apiVersion" . }}
+    kind: StatefulSet
     name: {{ include "pyspark.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
