--- a/values.yaml
+++ b/values.yaml
@@ -37,6 +37,24 @@ persistence:
     enabled: false
   annotations: {}
 
+# Extra environment variables to append to pyspark container
+# This will be appended to the current 'env:' key. You can use any of the kubernetes env
+# syntax here
+env: []
+# - name: MY_ENVIRONMENT_VAR
+#   value: the_value_goes_here
+
+# Allows you to load environment variables from kubernetes secret
+secret: []
+# - envName: GOOGLE_APPLICATION_CREDENTIALS
+#   secretName: ""
+#   secretKey: ""
+# - envName: AWS_ACCESS_KEY_ID
+#   secretName: ""
+#   secretKey: ""
+# - envName: AWS_SECRET_ACCESS_KEY
+#   secretName: ""
+#   secretKey: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
