fix custom environment

--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -78,8 +78,8 @@ spec:
             - name: "{{ template "pyspark.fullname" . }}"
               mountPath: /home/notebook
             {{- end }}
-          envFrom:
-          {{- include "pyspark.customEnvironmentFrom" . | default "\n  []" | indent 10 }}
+          env:
+          {{- include "pyspark.customEnvironment" . | indent 10 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
