--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -48,11 +48,6 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       volumes:
-      {{- if .Values.persistence.enabled }}
-        - name: notebooks
-          persistentVolumeClaim:
-            claimName: {{ template "pyspark.fullname" . }}-notebooks
-      {{- end }}
       {{- if .Values.extraVolumes }}
       {{- toYaml .Values.extraVolumes | nindent 8 }}
       {{- end }}
@@ -84,7 +79,7 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
             {{- if .Values.persistence.enabled }}
-            - name: notebooks
+            - name: {{ template "pyspark.fullname" . }}-notebooks
               mountPath: /home/notebook
             {{- end }}
             {{- if .Values.extraVolumeMounts }}
