add security context default

--- a/values.yaml
+++ b/values.yaml
@@ -18,7 +18,7 @@ volumeClaimTemplate:
   volumeMode: Filesystem
   resources:
     requests:
-      storage: 100Mi
+      storage: 10Gi
   storageClassName: standard
 
 persistence:
@@ -32,8 +32,8 @@ persistence:
 # This will be appended to the current 'env:' key. You can use any of the kubernetes env
 # syntax here
 env: []
-# - name: GOOGLE_APPLICATION_CREDENTIALS
-#   value: path_to_credential
+  # - name: GOOGLE_APPLICATION_CREDENTIALS
+  #   value: /mnt/secrets/key.json
 
 # Allows you to load environment variables from kubernetes secret
 secret: []
@@ -46,13 +46,14 @@ secret: []
 
 # Mount additional volumes into pyspark container.
 extraVolumes: []
-  # - name: foo
-  #   mountPath: "/etc/foo"
-  #   readOnly: true
+#   - name: secrets
+#     secret:
+#       secretName: gcp-credentials
+
 extraVolumeMounts: []
-  # - name: foo
-  #   secret:
-  #     secretName: mysecret
+#   - name: secrets
+#     mountPath: "/mnt/secrets"
+#     readOnly: true
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -65,16 +66,17 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+podSecurityContext: 
+  fsGroup: 1000
+  runAsUser: 1000
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
+securityContext: 
+  capabilities:
+    drop:
+    - ALL
   # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+  runAsNonRoot: true
+  runAsUser: 1000
 
 # The default is to deploy all pods serially. By setting this to parallel all pods are started at
 # the same time when bootstrapping the cluster
