--- a/values.yaml
+++ b/values.yaml
@@ -31,7 +31,7 @@ persistence:
 # Extra environment variables to append to pyspark container
 # This will be appended to the current 'env:' key. You can use any of the kubernetes env
 # syntax here
-env: []
+env: [] 
   # - name: GOOGLE_APPLICATION_CREDENTIALS
   #   value: /mnt/secrets/key.json
 
@@ -66,8 +66,10 @@ serviceAccount:
 
 podAnnotations: {}
 
+disableToken: false
+
 podSecurityContext: 
-  fsGroup: 1000
+  fsGroup: 100
   runAsUser: 1000
 
 securityContext: 
