Updating chart information

--- a/charts/pyspark-notebook/Chart.yaml
+++ b/charts/pyspark-notebook/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.1.0-RC
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -23,7 +23,9 @@ version: 0.1.0
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
 maintainers:
-- email: helm-charts@a3data.com.br
-  name: A3Data
+- email: marcusvoliveira@dcc.ufmg.br
+  name: Marcus V. Oliveira
+- email: maylateixeira2013@gmail.com
+  name: Mayla Teixeira
 sources:
   - https://github.com/a3data/pyspark-helm
