--- a/ct.yaml
+++ b/ct.yaml
@@ -4,4 +4,4 @@ target-branch: master
 chart-dirs:
   - charts
 chart-repos:
-  - pyspark-notebook=https://a3data.github.io/pyspark-helm/
+  - pyspark-notebook=https://a3data.github.io/pyspark-notebook-helm/
