make jupyter lab as default

--- a/charts/pyspark-notebook/templates/statefulset.yaml
+++ b/charts/pyspark-notebook/templates/statefulset.yaml
@@ -57,9 +57,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if .Values.disableToken }}
           command: ["start.sh"]
-          args: ["jupyter", "lab", "--LabApp.token=''"]
+          args:
+            - "jupyter"
+            - "lab"
+          {{- if .Values.disableToken }}
+            - "--LabApp.token=''"
           {{- end }}
           ports:
             - name: http
