--- a/charts/pyspark-notebook/Chart.yaml
+++ b/charts/pyspark-notebook/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.2.1
+version: 0.2.2
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -27,5 +27,8 @@ maintainers:
   name: voidmarcus
 - email: maylateixeira2013@gmail.com
   name: maylatt
+- email: neylsoncrepalde@gmail.com
+  name: neylsoncrepalde
+
 sources:
   - https://github.com/a3data/pyspark-notebook-helm
